--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,6 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - mmosc
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - giuliowaitforitdavide/recsyslearn
+  - mbuccoli/tsoai-lullaby
