--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -18,6 +18,11 @@
   - firstname: ["Emilia"]
     url: https://www.researchgate.net/profile/Emilia-Parada-Cabaleiro
 
+"Reiter-Haas":
+  - firstname: ["Markus"]
+    url: https://iseratho.github.io/
+
+
 "Lesota":
   - firstname: ["Oleg"]
     url: https://hcai.at/persons/lesota/
