update coauthors and repos

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -2,6 +2,10 @@
   - firstname: ["Markus"]
     url: http://www.mschedl.eu/
 
+"Nawaz":
+  - firstname: ["Shah"]
+    url: https://hcai.at/persons/nawaz/
+
 "Zangerle":
   - firstname: ["Eva"]
     url: https://evazangerle.at/
