--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -4,3 +4,5 @@ github_users:
 github_repos:
   - giuliowaitforitdavide/recsyslearn
   - mbuccoli/tsoai-lullaby
+  - mmosc/familiarizing_with_music
+  - mmosc/cobrar
